feat(user): create user register model and documentation
