# src/modules/user/handlers/api.ts
@@ -4,6 +4,8 @@ import Response from '../../../helpers/interfaces/response';
 import QueryHandler from '../repositories/query/query_handler';
 import queryModel, { UserLogin } from '../repositories/query/query_model';
 import validator from '../../../helpers/utils/validator';
+import CommandHandler from '../repositories/command/command_handler';
+import commandModel, { UserRegister } from '../repositories/command/command_model';
 
 const userLogin = async (req: Request, res: Response) => {
     const payload: UserLogin = {
@@ -30,9 +32,35 @@ const userLogin = async (req: Request, res: Response) => {
 }
 
 const userRegister = async (req: Request, res: Response) => {
-    
+    const payload: UserRegister = {
+        userId: req.body?.userId,
+        corporateId: req.body?.corporateId,
+        corporateName: req.body?.corporateName,
+        role: req.body?.role,
+        userName: req.body?.userName,
+        email: req.body?.email,
+        phoneNumber: req.body?.phoneNumber,
+        verifCode: req.body?.verifCode,
+    };
+
+    const validatedData = validator.isValidate(commandModel.userRegister, payload);
+    const getData = async (result: Wrapper) => {
+        if (result.err) {
+            return result;
+        }
+
+        return await CommandHandler.userRegister(result.data)
+    }
+
+    const sendResponse = async (result: Wrapper) => {
+        (result.err) ? wrapper.response(res, 'fail', result)
+            : wrapper.response(res, 'success', result, 'Register user success');
+    };
+
+    sendResponse(await getData(validatedData));
 }
 
 export default {
     userLogin,
+    userRegister,
 }
