# src/modules/user/repositories/command/command_model.ts
@@ -1,3 +1,4 @@
+import { indonesianPhoneNumber } from "../../../../helpers/utils/utils";
 import { z } from "zod";
 
 export type UserRegister = z.infer<typeof userRegister>
@@ -5,6 +6,11 @@ const userRegister = z.object({
     corporateId: z.string().min(1).trim(),
     corporateName: z.string().min(1).trim(),
     userId: z.string().min(1).trim(),
+    userName: z.string().min(1).trim(),
+    role: z.enum(['Maker', 'Approver']),
+    phoneNumber: z.string().min(1).max(18).transform(indonesianPhoneNumber),
+    email: z.string().email().min(1).trim(),
+    verifCode: z.string().min(1).max(6).trim(),
 });
 
 export default {
